[tool.poetry]
name = "timtools"
version = "1.0.3"
description = ""
authors = ["Tim Mees <tim.mees83@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pytz = "^2021.3"
validators = "^0.18.2"
configparser = "^5.0.2"
python-telegram-bot = "^13.7"
xdg = "^5.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"
isort = "^5.10.1"
black = "^21.10b0"
bandit = "^1.7.1"
safety = "^1.10.3"
pre-commit = "^2.15.0"
flake8-bugbear = "^21.9.2"
testfixtures = "^6.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
