[tool.poetry]
name = "timtools"
version = "2.0.2"
description = ""
authors = ["Tim Mees <tim.mees83@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pytz = ">=2021.3"
validators = ">=0.18.2"
configparser = ">=5.0.2"
python-telegram-bot = ">=13.7"
xdg = ">=0.27"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
flake8 = ">=4.0.1"
pep8-naming = ">=0.12.1"
isort = ">=5.10.1"
black = ">=22.3.0"
bandit = ">=1.7.1"
safety = ">=1.10.3"
pre-commit = ">=2.15.0"
flake8-bugbear = ">=21.9.2"
testfixtures = ">=6.18.3"
flake8-docstrings = ">=1.6.0"
darglint = ">=1.8.1"
pylint = ">=2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
