[tool.poetry]
name = "timtools"
version = "2.1.0"
description = ""
authors = ["Tim Mees <tim.mees83@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pytz = ">=2021.3"
validators = ">=0.18.2"
configparser = ">=5.0.2"
python-telegram-bot = ">=13.7"
xdg = ">=0.27"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
pre-commit = ">=2.15.0"
testfixtures = ">=6.18.3"
pylint = ">=2.12.2"
ruff = ">=0.0.256"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.ruff]
line-length = 88
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Flake8-bugbear
    "B"
]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
